# Adskaya_sjimalnya

./: .gitignore  Adskaya sjimalnya v14.88.c  CMakeLists.txt  README.md  bit2char.c  bit2char.h  derevo.c  derevo.h  fileio.c  fileio.h  keyio.c  keyio.h
